@@ -12,8 +12,10 @@ installer      = Author::Plicease::MakeMaker
 github_user    = uperl
 default_branch = main
 test2_v0       = 1
-workflow       = linux
 irc            = irc://irc.perl.org/#native
+
+workflow = static
+workflow = linux
 
 [Author::Plicease::Core]
 
